# horology

./: .gitignore  CHANGELOG.md  LICENSE  README.md  Timed.py  pyproject.toml  setup.py
.circleci/: config.yml
.github/: contributing.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: codeql.yaml  tests.yaml
TTT/: __init__.py  tformatter.py  timed_context.py  timed_decorator.py  timed_iterable.py
horology/: __init__.py  tformatter.py  timed_context.py  timed_decorator.py  timed_iterable.py
tests/: test_actual_delay.py  test_context.py  test_decorator.py  test_iterable.py  test_tformatter.py
