[tool.poetry]
name = "horology"
version = "1.2.0"
description = "Conveniently measures the time of loops, contexts and functions."
authors = ["mjmikulski <maciej.mikulski.jr@gmail.com>"]
license = "MIT"
repository = 'https://github.com/mjmikulski/horology'
readme = 'README.md'
keywords = ['timing', 'profiling', 'measure time', 'duration']
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Topic :: Utilities',
    'Topic :: Software Development :: Libraries',
    'Topic :: Software Development :: Testing',
    'Topic :: Software Development :: Libraries :: Python Modules',
    "Operating System :: OS Independent"]


[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
unittest = "^0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
