[tool.poetry]
name = "horology"
version = "1.3.0-alpha"
description = "Conveniently measures the time of loops, contexts and functions."
authors = ["mjmikulski <maciej.mikulski.jr@gmail.com>"]
license = "MIT"
repository = 'https://github.com/mjmikulski/horology'
readme = 'README.md'
keywords = ['timing', 'profiling', 'measure time', 'duration']
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Topic :: Utilities',
    'Topic :: Software Development :: Libraries',
    'Topic :: Software Development :: Testing',
    'Topic :: Software Development :: Libraries :: Python Modules',
    "Operating System :: OS Independent"]


[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "7.1.*"
mypy = "^0.990"

[tool.pytest.ini_options]
addopts = "--doctest-modules"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
